[project]
name = "pytest-concepts"
version = "0.1.0"
description = "Pytest examples"
authors = [{name = "Me", email = "me@example.com>"}]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
pytest-html = "^4.1.1"
allure-pytest = "^2.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
